--- a/style.css
+++ b/style.css
@@ -98,3 +98,8 @@ form {
   padding: 0 0.8rem;
   display: block;
 }
+.form-group {
+  margin-top: 2.2rem;
+  display: flex;
+  flex-direction: column;
+}
