--- a/style.css
+++ b/style.css
@@ -103,3 +103,66 @@ form {
   display: flex;
   flex-direction: column;
 }
+.form-group label {
+  margin-bottom: 1rem;
+  color: var(--Very-dark-violet);
+  text-transform: uppercase;
+  display: inline-block;
+  font-size: 1.2rem;
+  letter-spacing: 0.165em;
+}
+.form-group input {
+  font-size: 1.7rem;
+  letter-spacing: 0.03em;
+  font-weight: 500;
+  width: 100%;
+  border: 1px solid var(--Light-grayish-violet);
+  border-radius: 0.8rem;
+  height: 4.5rem;
+  padding: 0 1.6rem;
+  color: var(--Very-dark-violet);
+}
+
+.form-exp-date {
+  display: flex;
+  gap: 1rem;
+}
+
+.form-group input:focus {
+  border: 1px solid;
+  border-color: var(--active-input-border);
+}
+.info-err {
+  margin-top: 1rem;
+  font-size: 1.2rem;
+  color: var(--input-errors);
+  display: none;
+}
+.date {
+  display: flex;
+  gap: 0.8rem;
+}
+#month,
+#year {
+  width: 7.2rem;
+}
+.btn {
+  display: block;
+  margin-top: 2.8rem;
+  border: 0;
+  background-color: var(--Very-dark-violet);
+  color: white;
+  width: 100%;
+  height: 5.3rem;
+  border-radius: 0.8rem;
+  font-size: 1.8rem;
+  font-weight: 500;
+  cursor: pointer;
+  transition: all 0.3s ease-in-out;
+}
+.btn:hover {
+  background: hsl(252, 45%, 70%);
+}
+.complete {
+  display: none;
+}
